--- a/ui/app/stylesheets/settings/base.sass
+++ b/ui/app/stylesheets/settings/base.sass
@@ -8,14 +8,14 @@
 // Fonts
 //***********************************
 
-$base-font-family: $opensans
-$base-font-size: 16px
+$base-font-family: $montserrat
+$base-font-size: 12px
 
 //***********************************
 // Colors
 //***********************************
 
-$base-color: $black
+$base-color: $aluminium
 
 //***********************************
 // Spacing
