--- a/ui/app/stylesheets/settings/colors.sass
+++ b/ui/app/stylesheets/settings/colors.sass
@@ -1,14 +1,10 @@
-// --------------------------------------------------------------------------
-// colors.sass
-// --------------------------------------------------------------------------
-// This file assigns all hex colors to variables
-// --------------------------------------------------------------------------
-// All names are genereted using 'http://chir.ag/projects/name-that-color'
-// --------------------------------------------------------------------------
-
-//***********************************
-// Greyscale
-//***********************************
-
-$black: #000
-$white: #fff
+$willow-grove: #67765f
+$limed-ash: #757c62
+$coriander: #beb68b
+$satin-linen: #e5e4d1
+$cinder: #202b2f
+$viridian-green: #4f5b5a
+$aluminium: #82878a
+$celeste: #d2d0ca
+$iron: #d2d9dc
+$finlandia: #576752
