--- a/ui/app/stylesheets/settings/fonts.sass
+++ b/ui/app/stylesheets/settings/fonts.sass
@@ -8,10 +8,27 @@
 // @font-face rules
 //***********************************
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700italic,700,800,800italic)
+@font-face
+    font-family: montserrat
+    font-style: normal
+    font-weight: lighter
+    src: url(../fonts/Montserrat-ExtraLight.woff)
+
+@font-face
+    font-family: montserrat
+    font-style: normal
+    font-weight: normal
+    src: url(../fonts/Montserrat-Light.woff)
+
+@font-face
+    font-family: montserrat
+    font-style: normal
+    font-weight: bold
+    src: url(../fonts/Montserrat-Regular.woff)
+
 
 //***********************************
 // Customs
 //***********************************
 
-$opensans: 'Open Sans', sans-serif
+$montserrat: montserrat, sans-serif
