--- a/ui/app/stylesheets/tools/mixins/hover.sass
+++ b/ui/app/stylesheets/tools/mixins/hover.sass
@@ -1,11 +1,13 @@
 // --------------------------------------------------------------------------
-// headings.sass
+// hover.sass
 // --------------------------------------------------------------------------
-// This file assigns gloablly used heading sizes to variables
+// This mixin outputs hover selectors
 // --------------------------------------------------------------------------
 
-//***********************************
-// Heading size variables
-//***********************************
-
-$heading-sizes: (1: 48px, 2: 36px, 3: 26px, 4: 22px)
+=hover
+    .no-touch &:hover,
+    .no-touch &:focus,
+    .touch &:active
+        @content
+        outline: none
+        
