Added content row block

--- a/ui/app/stylesheets/blocks/site-footer.sass
+++ b/ui/app/stylesheets/blocks/site-footer.sass
@@ -6,6 +6,7 @@ $site-footer-padding: spacing(4)
     +display(flex)
     background-color: $site-footer-bgc
     line-height: 1
+    margin-top: spacing(3)
     padding: $site-footer-padding
 
     &__copyright
