--- a/ui/app/stylesheets/generic/typography.sass
+++ b/ui/app/stylesheets/generic/typography.sass
@@ -8,7 +8,10 @@
     clip: rect(0,0,0,0)
     border: 0
 
-body
+.page
+    color: $base-color
     font-family: $base-font-family
     font-size: $base-font-size
-    color: $base-color
+    letter-spacing: 2px
+    line-height: 1.8
+    text-transform: uppercase
