Adding image sldier block

--- a/ui/app/stylesheets/blocks/banner.sass
+++ b/ui/app/stylesheets/blocks/banner.sass
@@ -1,4 +1,12 @@
 .banner
+    
+    &--is-in-edit-mode &
+        &__slide
+            background-color: $celeste
+            display: block
+            height: 500px
+        &__title
+            color: $viridian-green
 
     &__slide
         display: none
