Gallery filtering and categories

--- a/ui/app/stylesheets/blocks/section.sass
+++ b/ui/app/stylesheets/blocks/section.sass
@@ -51,7 +51,7 @@ $section-content-tertiary-bgc: rgba($viridian-green, .8)
         color: $section-content-color
         padding: $section-content-padding
         position: relative
-        width: 50%
+        width: calc(50% - 15px)
         z-index: 1
 
         .button
