--- a/ui/app/stylesheets/application.sass
+++ b/ui/app/stylesheets/application.sass
@@ -17,6 +17,7 @@
 @import 'settings/breakpoints'
 @import 'settings/headings'
 @import 'settings/base'
+@import 'settings/selectron'
 
 //***********************************
 // Tools
