--- a/ui/app/stylesheets/blocks/gallery.sass
+++ b/ui/app/stylesheets/blocks/gallery.sass
@@ -10,3 +10,35 @@
     &__image
         display: block
         max-width: 100%
+
+    &__content 
+        +align-items(center)
+        +display(flex)
+        color: $celeste
+        font-family: $base-font-family
+        margin: spacing(3) 0
+        text-transform: uppercase
+
+        .sharetastic
+            margin-left: auto
+            padding-left: spacing(2)
+
+    &__title
+        font-size: 14px
+        font-weight: lighter
+        margin: 0
+
+    &__description
+        font-size: 11px
+        font-weight: lighter
+        margin: 0
+
+    +breakpoint(medium)
+        &__content
+            display: block
+            .sharetastic
+                padding-left: 0
+                margin-left: 0
+                margin-top: spacing(2)
+                padding-top: spacing(2)
+                border-top: 1px solid rgba($celeste, .2)
