Finishing url framework

--- a/ui/app/stylesheets/layouts/site-navigation.sass
+++ b/ui/app/stylesheets/layouts/site-navigation.sass
@@ -34,6 +34,8 @@ $navigation-divide-color: $iron
         margin-right: auto
         opacity: 0
         outline: none
+        overflow: hidden
+        text-indent: 100px
         width: 100px
         img
             max-width: 100%
