--- a/ui/app/stylesheets/layouts/site-navigation.sass
+++ b/ui/app/stylesheets/layouts/site-navigation.sass
@@ -66,3 +66,6 @@ $navigation-divide-color: $iron
             color: $navigation-link-color-active
         +hover
             color: $navigation-link-color-active
+
+    +breakpoint(large)
+        padding: spacing(2) 0
