--- a/ui/app/stylesheets/blocks/banner.sass
+++ b/ui/app/stylesheets/blocks/banner.sass
@@ -1,11 +1,12 @@
 .banner
     margin-bottom: spacing(3)
-    
+
     &--is-in-edit-mode &
         &__slide
             background-color: $celeste
             display: block
             height: 500px
+
         &__title
             color: $viridian-green
 
@@ -26,6 +27,7 @@
         font-weight: bold
         letter-spacing: 4px
         margin: 0
+
         &::after
             content: ' /'
 
@@ -43,10 +45,12 @@
         margin: 0
         padding: 0
 
-        .slick-active button
-            background-color: #FFF
-            &:focus
-                background-color: rgba(#fff, .5)
+        .slick-active
+            button
+                background-color: #FFF
+
+                &:focus
+                    background-color: rgba(#fff, .5)
 
         button
             +size(10px)
@@ -59,6 +63,7 @@
             margin-right: 5px
             outline: none
             padding: 0
+
             &:focus
                 border-style: dotted
                 border-width: 1px
