--- a/ui/app/stylesheets/blocks/color-pick.sass
+++ b/ui/app/stylesheets/blocks/color-pick.sass
@@ -1,5 +1,9 @@
+.color-pickers
+    overflow: hidden
+    position: relative
+
 .color-pick
-    display: none
+    +position(absolute, 100% 100% null null)
 
     &:checked + label
         border-color: #3276b1
