--- a/ui/app/stylesheets/blocks/button.sass
+++ b/ui/app/stylesheets/blocks/button.sass
@@ -14,3 +14,6 @@ $button-padding: spacing(2)
 
     +hover
         background-color: $button-hover-bgc
+
+    +breakpoint(large)
+        padding: spacing(1) spacing(2)
