--- a/ui/app/stylesheets/blocks/gallery.sass
+++ b/ui/app/stylesheets/blocks/gallery.sass
@@ -1,6 +1,6 @@
 .gallery
-    margin-top: spacing(3)
     margin-right: spacing(-3)
+    margin-top: spacing(3)
 
     &__item
         margin-bottom: spacing(3)
@@ -11,7 +11,7 @@
         display: block
         max-width: 100%
 
-    &__content 
+    &__content
         +align-items(center)
         +display(flex)
         color: $celeste
@@ -33,12 +33,30 @@
         font-weight: lighter
         margin: 0
 
-    +breakpoint(medium)
+    +breakpoint(large)
+        margin-right: spacing(-1.5)
+        margin-top: spacing(1.5)
+
+        &__item
+            margin-bottom: spacing(1.5)
+            margin-right: spacing(1.5)
+            width: calc(50% - 15px)
+
+    +breakpoint(small)
+        margin-right: 0
+        margin-top: spacing(1)
+
         &__content
             display: block
+
             .sharetastic
-                padding-left: 0
+                border-top: 1px solid rgba($celeste, .2)
                 margin-left: 0
                 margin-top: spacing(2)
+                padding-left: 0
                 padding-top: spacing(2)
-                border-top: 1px solid rgba($celeste, .2)
+
+        &__item
+            margin-bottom: spacing(1)
+            margin-right: 0
+            width: 100%
