--- a/ui/app/stylesheets/blocks/gallery.sass
+++ b/ui/app/stylesheets/blocks/gallery.sass
@@ -9,7 +9,7 @@
 
     &__image
         display: block
-        max-width: 100%
+        width: 100%
 
     &__content
         +align-items(center)
