--- a/ui/app/stylesheets/layouts/base.sass
+++ b/ui/app/stylesheets/layouts/base.sass
@@ -12,6 +12,18 @@ body
     background-color: #FFF
     padding: $page-padding
 
+.wysiwyg
+    max-width: 700px
+    margin: 0 auto spacing(8)
+    h3
+        font-size: 18px
+        color: $viridian-green
+    hr
+        border: none
+        border-top: 1px solid $iron
+        margin: spacing(2) 0
+        height: 0px
+
 +breakpoint(large)
     body
         padding: spacing(1)
